[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "python-template"
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Edward Li", email = "edward.w.li@outlook.com" },
]
keywords = [
]
dependencies = [
]
dynamic = ["version"]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py311"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "COM",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
]
ignore = [
  # too-many-arguments
  "PLR0913",
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"tests/**/*" = [
  # magic-value-comparison
  "PLR2004",
  # assert
  "S101",
]
